[metadata]
name = kvstorage
author = Alexander Majorov
author_email = alexander.majorov@gmail.com
license='MIT',
description = Is a pretty simple library for working with key-value storage and document databases
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/frontdevops/nosql-storage-wrapper
project_urls =
    Documentation: https://github.com/frontdevops/nosql-storage-wrapper/blob/main/README.md
    Source: https://github.com/frontdevops/nosql-storage-wrapper
    Bug Tracker: https://github.com/frontdevops/nosql-storage-wrapper/issues

classifiers =
    Programming Language :: Python :: 3,
    License :: OSI Approved :: MIT License,
    Operating System :: OS Independent,
    Development Status :: 5 - Production/Stable,
    License :: OSI Approved :: MIT License,
    Programming Language :: Python :: 3.10.8,
    Programming Language :: Python :: 3.11,
    Topic :: Software Development :: Libraries :: Application Utilities,

[options]
package_dir =
    = nosql_storage
packages = find:
python_requires = >=3.10.8

[options.packages.find]
where = src
